# duckdb-with-argo-wf

./: .gitignore  Dockerfile  pyproject.toml  time.txt
.github/workflows/: build.yml
src/: main.py  queries.py
workflows/: wf.yaml
